_sass/styles.scss
$primary: #ee87bf;
$primary-lighter: lighten($primary, 20%);
$secondary: #263238;
$complementary: complement($primary);

$cursive: 'Arizonia', cursive;
$sans: 'Karla', sans-serif;
$serif: 'Lusitana', serif;

body {
  font-family: $sans;
  font-weight: 400;
}

a,
a:visited,
a:focus {
  color: $primary;
}

a:hover {
  color: $complementary;
}

q::before,
q::after {
  content: '';
}

blockquote,
q {
  quotes: '' '';
}

* {
  box-sizing: border-box;
}

section {
  margin: 0 auto;
  max-width: 1200px;
  padding: 6rem 0;
  width: 80%;

  @media only screen and (max-width: 1366px) {
    padding: 4rem 0;
  }

  @media only screen and (max-width: 1024px) {
    width: 90%;
  }

  @media only screen and (max-width: 812px) {
    padding: 3rem 0;
  }

  @media only screen and (max-width: 760px) {
    padding: 1rem 0;
  }
}

.post-single {
  padding: 0 0 6rem;

  @media only screen and (max-width: 1366px) {
    padding: 0 0 4rem;
  }

  @media only screen and (max-width: 812px) {
    padding: 0 0 3rem;
  }

  @media only screen and (max-width: 760px) {
    padding: 0 0 1rem;
  }
}

h2 {
  color: $secondary;
  font-family: $serif;
  font-size: 3rem;
  font-weight: 700;

  @media only screen and (max-width: 760px) {
    font-size: 2rem;
  }
}

h3 {
  color: $complementary;
  font-family: 'Karla';
  font-size: 1.125rem;
  font-style: normal;
  font-weight: 700;
  letter-spacing: 0.2em;
  line-height: 1.4;
  margin-bottom: 1rem;
  text-align: center;
  text-transform: uppercase;

  @media only screen and (max-width: 760px) {
    line-height: 1.2;
  }
}

p {
  @media only screen and (max-width: 760px) {
    margin: 0.5rem 0;
  }
}

@import 'normalize';
@import 'about';
@import 'ad';
@import 'blog';
@import 'footer';
@import 'header';
@import 'menu';
@import 'next-steps';
@import 'reviews';
@import 'welcome';
@import 'work-with';

